--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             </div>
             <div class="section section-works" id="works" v-if="page==2">
                 <div class="flex-wrapper gallery-wrapper">
-                    <a class="gallery-item" href="#" v-for="work in works">
+                    <a class="gallery-item" :href="work.href" v-for="work in works" target="_blank">
                         <div class="gallery-item-head">
                             <div class="gallery-item-head-img-wrapper">
-                                <img src="img/work/wk_ecs.png" alt="">
+                                <img :src="work.link" alt="">
                             </div>
                         </div>
                         <div class="gallery-item-body">
@@ -132,8 +132,8 @@
                                 {{work.title}}
                             </div>
                             <div class="gallery-item-content">
-                                <div class="gallery-item-content-des">作品的敘述內容</div>
-                                <div class="gallery-item-content-time">2019 / 01</div>
+                                <div class="gallery-item-content-des">{{work.content}}</div>
+                                <div class="gallery-item-content-time">{{work.time}}</div>
                             </div>
                         </div>
                     </a>
@@ -156,10 +156,33 @@
             data: {
                 page: 2,
                 works: [{
-                        title: '2019 ECS 春季聯賽',
-                        content: '英雄聯盟次級聯賽官方網站製作',
-                        time: '2018 / 07'
-                    }
+                        title: '2019 英雄聯盟 ECS 宣傳網站',
+                        content: '聯賽官方網站 UI 切版製作',
+                        time: '2018 / 07',
+                        link: 'img/work/wk_ecs.png',
+                        href: 'works/ecs.html'
+                    },
+                    {
+                        title: '英雄聯盟 S8 季前活動網站',
+                        content: '遊戲開季前獎勵網站 UI 切版',
+                        time: '2018 / 07',
+                        link: 'img/work/wk_preseason.jpg',
+                        href: 'https://www.solartninc.com'
+                    },
+                    {
+                        title: '財團法人青馬影藝學院網站',
+                        content: '線上影藝教學網站',
+                        time: '2018 / 07',
+                        link: 'img/work/wk_qm.jpg',
+                        href: 'https://www.solartninc.com'
+                    },
+                    {
+                        title: '英雄聯盟 過五關集六字',
+                        content: '遊戲週年慶活動網站',
+                        time: '2018 / 07',
+                        link: 'img/work/wk_sixcard.jpg',
+                        href: 'https://www.solartninc.com'
+                    },
 
                 ]
             },
