--- a/works/ecs.html
+++ b/works/ecs.html
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="banner-section">
                 <div class="banner-img-wrapper">
-                    <div class="banner-title">作品名稱</div>
+                    <div class="banner-title">2019 英雄聯盟 ECS 宣傳網站</div>
                     <img src="../img/work/wk_ecs.png" alt="">
                 </div>
             </div>
@@ -64,10 +64,13 @@
                     作品與活動概述
                 </div>
                 <div class="work-content-details">
-                    ECS 全名為「Elite Challenger Series – 菁英挑戰聯賽」，是台港澳創立的英雄聯盟次級聯賽，<br>
-                    與 LMS 同樣一年預計將有春、夏兩季的常規性季賽，每一季的例行賽事結束後會進行季後賽，<br>
+                    ECS 全名為「Elite Challenger Series – 菁英挑戰聯賽」，是台港澳創立的英雄聯盟次級聯賽，
+                    與 LMS 同樣一年預計將有春、夏兩季的常規性季賽，每一季的例行賽事結束後會進行季後賽，
                     此作品為戰隊的報名網站，功能較為簡單，版面以賽事、活動說明以及公告內容為主。
                 </div>
+                <a class="work-static-website" href="#">
+                    查看靜態網站
+                </a>
             </div>
         </div>
 
@@ -81,42 +84,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
     <script src="../js/custom.js"></script>
     <script>
-        new Vue({
-            el: '#app',
-            data: {
-                page: 2,
-                works: [{
-                        title: '2019 英雄聯盟 ECS 宣傳網站',
-                        content: '聯賽官方網站 UI 切版製作',
-                        time: '2018 / 07',
-                        link: 'img/work/wk_ecs.png',
-                        href: 'works/ecs.html'
-                    },
-                    {
-                        title: '英雄聯盟 S8 季前活動網站',
-                        content: '遊戲開季前獎勵網站 UI 切版',
-                        time: '2018 / 07',
-                        link: 'img/work/wk_preseason.jpg',
-                        href: 'https://www.solartninc.com'
-                    },
-                    {
-                        title: '財團法人青馬影藝學院網站',
-                        content: '線上影藝教學網站',
-                        time: '2018 / 07',
-                        link: 'img/work/wk_qm.jpg',
-                        href: 'https://www.solartninc.com'
-                    },
-                    {
-                        title: '英雄聯盟 過五關集六字',
-                        content: '遊戲週年慶活動網站',
-                        time: '2018 / 07',
-                        link: 'img/work/wk_sixcard.jpg',
-                        href: 'https://www.solartninc.com'
-                    },
-                ]
-            },
-            methods: {},
-        })
+
     </script>
     <script>
         $(document).ready(function () {
