--- a/works/ecs/index.html
+++ b/works/ecs/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1.0" />
 	<link rel="icon" type="image/ico" href="images/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3530f29c86.js" crossorigin="anonymous"></script>
 	<style type="text/css">
 		@import url(css/reset.css);
 		@import url(css/layout.css);
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-	<a href="../../index.html">回到首頁</a>
+	<a href="../../ecs.html"><div class="togallery"><i class="fas fa-arrow-circle-left backer" aria-hidden="true"></i>回上一頁</div></a>
 	<div class="icon">
 		<a href="https://www.twitch.tv/upmedia" title="賽事直播" target="_blank"></a>
 		<a href="http://mod.cht.com.tw/news/events/content.php?id=9520" title="2019 ECS爭霸戰 MOD Live直播"
