--- a/works/ecs/signup.html
+++ b/works/ecs/signup.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width; initial-scale=1.0" />
 	<link rel="icon" type="image/ico" href="images/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3530f29c86.js" crossorigin="anonymous"></script>
 	<style type="text/css">
 		<!--
 		@import url(css/reset.css);
@@ -19,6 +20,7 @@
 
 <body>
 
+	<a href="../../ecs.html"><div class="togallery"><i class="fas fa-arrow-circle-left backer" aria-hidden="true"></i>回上一頁</div></a>
 	<div class="icon">
 		<a href="signupForm.html" alt="我要報名" title="我要報名"></a>
 		<a href="https://www.twitch.tv/upmedia" alt="賽事直播" title="賽事直播" target="_blank"></a>
