--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         content: '遊戲開季前獎勵網站 UI 切版',
                         time: '2018 / 07',
                         link: 'img/work/wk_preseason.jpg',
-                        href: 'https://www.solartninc.com'
+                        href: 'S8preseason.html'
                     },
                     {
                         title: '財團法人青馬影藝學院網站',
