--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
             </div>
             <div class="section section-works" id="works" v-if="page==2">
                 <div class="flex-wrapper gallery-wrapper">
-                    <a class="gallery-item" :href="work.href" v-for="work in works" target="_blank">
+                    <a class="gallery-item" :href="work.href" v-for="work in works">
                         <div class="gallery-item-head">
                             <div class="gallery-item-head-img-wrapper">
                                 <img :src="work.link" alt="">
+                            </div>
+                            <div class="tags">
+                                <div class="rwd-tag" v-if="work.isRWD == true">RWD</div>
+                                <div class="multi-browser-tag" v-if="work.multiBrowser == true">跨瀏覽器</div>
                             </div>
                         </div>
                         <div class="gallery-item-body">
@@ -155,34 +159,53 @@
             el: '#app',
             data: {
                 page: 2,
-                works: [{
+                works: [
+                    {
+                        title: '財團法人青馬影藝學院網站',
+                        content: '線上影藝教學網站',
+                        time: '2018 / 07',
+                        link: 'img/work/wk_qm.jpg',
+                        href: 'qing-ma.html',
+                        isRWD: true,
+                        multiBrowser: false,
+                    },
+                    {
+                        title: '恆星網路科技公司官網',
+                        content: 'Solertech Official',
+                        time: '2018 / 07',
+                        link: 'img/work/wk_solart.jpg',
+                        href: 'solartninc.html',
+                        isRWD: true,
+                        multiBrowser: true,
+                    },
+                    {
+                        title: '赞星直播平台管理後臺',
+                        content: 'BestCast TV Dashboard',
+                        time: '2018 / 07',
+                        link: 'img/work/wk_solart.jpg',
+                        href: 'solartninc.html',
+                        isRWD: true,
+                        multiBrowser: true,
+                    },
+                    {
                         title: '2019 英雄聯盟 ECS 宣傳網站',
                         content: '聯賽官方網站 UI 切版製作',
                         time: '2018 / 07',
                         link: 'img/work/wk_ecs.png',
-                        href: 'ecs.html'
+                        href: 'ecs.html',
+                        isRWD: false,
+                        multiBrowser: false,
                     },
                     {
                         title: '英雄聯盟 S8 季前活動網站',
                         content: '遊戲開季前獎勵網站 UI 切版',
                         time: '2018 / 07',
                         link: 'img/work/wk_preseason.jpg',
-                        href: 'S8preseason.html'
+                        href: 'S8preseason.html',
+                        isRWD: false,
+                        multiBrowser: false,
                     },
-                    {
-                        title: '財團法人青馬影藝學院網站',
-                        content: '線上影藝教學網站',
-                        time: '2018 / 07',
-                        link: 'img/work/wk_qm.jpg',
-                        href: 'https://www.solartninc.com'
-                    },
-                    {
-                        title: '英雄聯盟 過五關集六字',
-                        content: '遊戲週年慶活動網站',
-                        time: '2018 / 07',
-                        link: 'img/work/wk_sixcard.jpg',
-                        href: 'https://www.solartninc.com'
-                    },
+                    
 
                 ]
             },
